# binance-rs

./: Cargo.toml
examples/: binance_futures_endpoints.rs
src/: api.rs  client.rs  websockets.rs
src/futures/: market.rs  websockets.rs
